implemented getAuthorities